// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-jLOYlT hIiJfh"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-jLOYlT hIiJfh"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-jLOYlT hIiJfh"
>
  <span
    className="sc-WJksd jmittI"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-jLOYlT hIiJfh"
>
  <div
    className="sc-gRFyCy gXcHYy"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-jLOYlT gehdCA"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-jLOYlT dUjYCo"
  size="small"
/>
`;
